objects/PSRDP_Pricing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store pricing for PS RDP products based on regions.</description>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Info__c</fullName>
        <label>Product Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PSRDP Pricing</label>
</CustomObject>